...
  val context = LocalContext.current

  if (accountExists) {
    LaunchedEffect(userAccount) {
      userAccount?.let {
        userId2 = it.userId
        firstName = it.firstName
        lastName = it.lastName
        height = it.height.toString()
        weight = it.weight.toString()
        heightUnit = it.heightUnit
        weightUnit = it.weightUnit
        gender = it.gender
        birthDate =
            it.birthDate.let { timestamp ->
              val calendar = Calendar.getInstance()
              calendar.time = timestamp.toDate()
              "${calendar.get(Calendar.DAY_OF_MONTH)}/${calendar.get(Calendar.MONTH) + 1}/${
                            calendar.get(
...
        onHeightUnitChange = { heightUnit = it },
        onWeightUnitChange = { weightUnit = it },
        gender = gender,
        onGenderChange = { gender = it },
        birthDate = birthDate,
        onBirthDateChange = { birthDate = it },
        buttonText = if (accountExists) "Save Changes" else "Submit",
        onButtonClick = {
          saveAccount(
              isNewAccount = !accountExists,
              userAccountViewModel = userAccountViewModel,
              navigationActions = navigationActions,
              userId = if (accountExists) userId2 else actualUserId,
...
              friends = friends,
              sentRequests = sentRequests,
              receivedRequests = receivedRequests,
              context = context)
        },
        isButtonEnabled = firstName.isNotBlank(),
        testTag = if (accountExists) "editScreen" else "addScreen")
  }
}

@Composable
fun ProfileImagePicker(profileImageUri: Uri?, onImageClick: () -> Unit) {
  Box(
      contentAlignment = Alignment.Center,
      modifier =
          Modifier.size(80.dp)
              .clip(CircleShape)
              .border(1.dp, Color.Gray, CircleShape)
              .testTag("profileImage")
              .clickable { onImageClick() }) {
        if (profileImageUri != null) {
          Image(
              painter = rememberAsyncImagePainter(profileImageUri),
              contentDescription = "Profile Image",
              contentScale = ContentScale.Crop,
...
) {
  TextField(
      shape = roundFieldShape,
      textStyle = TextStyle(fontFamily = OpenSans, fontSize = SubtitleFontSize),
      value = firstName,
      onValueChange = onFirstNameChange,
      label = { Text("First Name", fontSize = SubtitleFontSize, fontFamily = OpenSans) },
      modifier =
          Modifier.fillMaxWidth()
              .padding(horizontal = 8.dp, vertical = 4.dp)
              .shadow(4.dp, shape = roundFieldShape)
              .testTag("firstName"),
      colors =
...
      shape = roundFieldShape,
      textStyle = TextStyle(fontFamily = OpenSans, fontSize = SubtitleFontSize),
      value = birthDate,
      onValueChange = onBirthDateChange,
      label = { Text("Birthday", fontFamily = OpenSans, fontSize = SubtitleFontSize) },
      placeholder = { Text("DD/MM/YYYY", fontFamily = OpenSans) },
      modifier = Modifier.fillMaxWidth().shadow(4.dp, shape = roundFieldShape).testTag("birthday"),
      colors =
          TextFieldDefaults.colors(
              focusedContainerColor = VeryLightBlue, unfocusedContainerColor = VeryLightBlue))
}

@Composable
...
      modifier =
          Modifier.fillMaxWidth(0.7f)
              .padding(horizontal = 8.dp)
              .height(48.dp)
              .shadow(4.dp, shape = buttonShape)
              .background(brush = BlueGradient, shape = buttonShape)
              .testTag("submit"),
      enabled = enabled) {
        Text(text, fontSize = MediumTitleFontSize)
      }
}

fun saveAccount(
...
